fix: visibility of overlay layout

--- a/src/css/dumbymap.css
+++ b/src/css/dumbymap.css
@@ -708,13 +708,13 @@ root {
   }
 
   .Showcase {
-    z-index: 0;
+    z-index: 1;
   }
 
   .SemanticHtml {
     pointer-events: none;
 
-    z-index: 1;
+    z-index: 2;
   }
 }
 
